--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "recharts": "^2.1.6",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
+    "redux-mock-store": "^1.5.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
